--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 </head>
 <body>
   <h2>快火箭</h2>
+  <img src="https://www.lgstatic.com/parttime-jobs/static/myself/modules/common/img/top-bg_c3d43c9.jpg" alt="">
   <script src="bundle.js"></script>
 </body>
 </html>
