--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <html>
 <head>
   <meta charset="utf-8">
+  <link href="app.css"  rel="stylesheet"  />
 </head>
 <body>
   <h2>快火箭</h2>
-  <img src="https://www.lgstatic.com/parttime-jobs/static/myself/modules/common/img/top-bg_c3d43c9.jpg" alt="">
-  <script src="bundle.js"></script>
+  <script src="out/commons.js"></script>
+  <script src="out/app.bundle.js"></script>
+  <script src="out/app1.bundle.js"></script>
 </body>
 </html>
