--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <html>
+
 <head>
   <meta charset="utf-8">
-  <link href="app.css"  rel="stylesheet"  />
 </head>
+
 <body>
-  <h2>快火箭</h2>
-  <script src="out/commons.js"></script>
-  <script src="out/app.bundle.js"></script>
-  <script src="out/app1.bundle.js"></script>
+  <h5>当前时间:</h5>
+  <script src="build/lib.js"></script>
+  <script src="dist/bundle.js"></script>
 </body>
+
 </html>
